--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
 <body>
     <button class="btn btn-primary" id="btn">Get News</button>
 
-    <div id="card" class="card" style="width: 18rem;">
-        <!-- <div class="card-body">
-          <h5 class="card-title" id="newsTitle">Card title</h5>
-          <p class="card-text" id="newsSyn">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div> -->
-      </div>
+    <div id="cardy"></div>
       
 
 
