--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cyber Stories</title>
+    <title>Cyber Scene</title>
     <link rel="icon" type="image/png" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
-    <nav>
-        <div class="navItem">
-            <a id="cyberLink" href="#">Cyber</a>
-        </div>
-        <div class="navItem">
-            <a id="warLink" href="#">War</a>
-        </div>
-    </nav>
+    <header>
+        <a href="#"><img id="logo" src="logo.png" alt="Company Logo"></a>
+        <nav>
+            <ul class="nav-links navItem">
+                <li><a id="cyberLink" href="#">Cyber</a></li>
+                <li><a id="warLink" href="#">War</a></li>
+            </ul>
+        </nav>
+        <a href="#"><button>Sign Up</button></a>
+    </header>
     <main>
         <div id="container"></div>
     </main>
 
       
 
-    <script type="module" src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
