--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 </head>
 <body>
     <header>
-        <a href="#"><img id="logo" src="logo.png" alt="Company Logo"></a>
         <nav>
-            <ul class="nav-links navItem">
-                <li><a id="cyberLink" href="#">Cyber</a></li>
-                <li><a id="warLink" href="#">War</a></li>
+            <ul class="nav-links">
+                <li><a id="cyber-link" href="#">Cyber</a></li>
+                <li><a id="war-link" href="#">War</a></li>
+                <li><a id="tech-link" href="#">Tech</a></li>
+                <li><a id="crypto-link" href="#">Crypto</a></li>
+                <li><a id="ransom-link" href="#">Ransom</a></li>
+                <li><a id="linux-link" href="#">Linux</a></li>
             </ul>
         </nav>
-        <a href="#"><button>Sign Up</button></a>
     </header>
     <main>
         <div id="container"></div>
